--- a/index.html
+++ b/index.html
@@ -323,12 +323,15 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">  A <span class="is-size-2"><span class="is-size-1">B</span>enchmark <span class="is-size-1">S</span>tudy <span class="is-size-1">o</span>n <span class="is-size-1">R</span>ealistic <span class="is-size-1">N</span> on-<span class="is-size-1">IID</span> <span class="is-size-1">D</span>ata Silos</span></h1>
+            <h1 class="title is-1 publication-title">  A <span class="is-size-2"><span class="is-size-1">B</span>enchmark <span class="is-size-1">S</span>tudy <span class="is-size-1">o</span>n <span class="is-size-1">R</span>ealistic <span class="is-size-1">N</span>on-<span class="is-size-1">IID</span> <span class="is-size-1">D</span>ata Silos</span></h1>
             <h3 class="title is-3 publication-title">Fundamentals and Experimental Analysis of Federated Learning Algorithms</h3>
             <h5 class="subtitle is-5 publication-awards">Coming</h5>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=AVt7JDYAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Mohammed Nechba<sup>*</sup></a>,
+                <a href="https://scholar.google.com/citations?user=CLgOVHUAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Abdellatif El Afia</a>,
+                <a href="https://scholar.google.com/citations?user=moRsZ2kAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Abdellatif El Afia</a>
+
               </span>
             </div>
 
