--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=AVt7JDYAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Mohammed Nechba<sup>*</sup></a>,
                 <a href="https://scholar.google.com/citations?user=CLgOVHUAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Abdellatif El Afia</a>,
-                <a href="https://scholar.google.com/citations?user=moRsZ2kAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Abdellatif El Afia</a>
+                <a href="https://scholar.google.com/citations?user=moRsZ2kAAAAJ&hl=fr" style="color:#f68946;font-weight:normal;">Bessam Abdulrazak</a>
 
               </span>
             </div>
