--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@ tbody tr:hover {
     </div>
     
   </div>
- 
+ </div> 
   <!-- Grounedtext2img. -->
   <div class="columns is-centered">
     <div class="column is-full-width">
