--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
   <!-- </div> -->
   <!--/ Results. -->    
 
-  <div class="column is-six-fifths" width="80%">
+  <div class="column is-six-fifths" >
     <table class="GeneratedTable">
       <thead>
         <tr>
@@ -810,6 +810,7 @@ tbody tr:hover {
   70% { box-shadow: 0 0 0 10px rgba(41, 128, 185, 0); }
   100% { box-shadow: 0 0 0 0 rgba(41, 128, 185, 0); }
 }
+
   </style>
 
   <!-- </div> -->
@@ -1180,11 +1181,6 @@ tbody tr:hover {
                 <td class="dataset-cell">Adult</td>
                 <td>% ± %</td><td>% ± %</td><td>
                 % ± %</td><td>% ± %</td>
-                <td>% ± %</td><td>% ± %</td><td>% ± %</td><td>% ± %</td><td>% ± %</td>
-              </tr>
-              <tr>
-                <td class="dataset-cell">FCUBE</td>
-                <td>% ± %</td><td>% ± %</td><td>% ± %</td><td>% ± %</td>
                 <td>% ± %</td><td>% ± %</td><td>% ± %</td><td>% ± %</td><td>% ± %</td>
               </tr>
             </tbody>
