--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ tbody tr:hover {
   </div>
   <!-- </div> -->
   <!--/ Results. -->    
-
+  <div class="container is-max-desktop">
   <div class="column is-full-width" >
     <table class="GeneratedTable">
       <thead>
@@ -768,7 +768,7 @@ tbody tr:hover {
       </tbody>
     </table>
   </div>
-
+  </div>
 
 <!-- CSS Code: Place this code in the document's head (between the 'head' tags) -->
 <style>
@@ -853,9 +853,7 @@ table.GeneratedTable thead {
     </div>
   </div>
 
-  <style>
-  
-  </style>
+
 
   <!-- </div> -->
   <!--/ Results. -->    
