--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ tbody tr:hover {
     <div class="container is-max-desktop">
       <div class="hero-body">
         <h4 class="subtitle has-text-centered">
-          🔥<span style="color: #ff3860">[NEW!]</span> FedBench-0.1.1  enables efficient FL benchmarking, evaluating 8+ algorithms across 9+ datasets (images/tabular) on one A40 GPU in ~2 weeks. It offers precise control over client heterogeneity with minimal setup, providing comprehensive metrics for actionable algorithm selection.   <br><br>
+          🔥<span style="color: #ff3860">[NEW!]</span> FedBench-0.1.3  enables efficient FL benchmarking, evaluating 8+ algorithms across 9+ datasets (images/tabular) on one A40 GPU in ~3 weeks. It offers precise control over client heterogeneity with minimal setup, providing comprehensive metrics for actionable algorithm selection.   <br><br>
           This end-to-end framework sets a new reproducibility standard through production-ready implementations, enabling direct performance comparisons while reducing validation overhead.
         </h4>
       </div>
@@ -652,6 +652,23 @@ tbody tr:hover {
         <div class="column is-six-fifths">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
+            <p>The field of federated learning (FL) has gained
+              prominence as a promising approach for training machine
+              learning models on distributed data while safeguarding privacy.
+              However, the effectiveness of FL algorithms can be considerably
+              impacted by non-independent and identically distributed
+              (Non-IID) data across participating clients. This study offers a
+              thorough comparative analysis of several notable FL algorithms,
+              including FedAvg, FedProx, SCAFFOLD, FedNova, FedAdagrad/
+              Yogi/Adam, MOON, and FedBN, under diverse Non-IID
+              data conditions. We examine the theoretical underpinnings of
+              these algorithms and assess their performance using established
+              datasets and evaluation metrics. Our findings illuminate the
+              advantages and limitations of each algorithm in managing
+              various types of Non-IID data, offering valuable guidance for
+              selecting the most suitable FL algorithm for specific use cases.
+              Additionally, we explore the constraints of current methodologies
+              and propose avenues for future investigation.</p>
             <!-- <p>
               Instruction tuning large language models (LLMs) using machine-generated instruction-following data has improved zero-shot capabilities on new tasks in the language domain, but the idea is less explored in the multimodal field.
               <ol type="1">
