--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ tbody tr:hover {
     <div class="container is-max-desktop">
       <div class="hero-body">
         <h4 class="subtitle has-text-centered">
-          🔥<span style="color: #ff3860">[NEW!]</span> FedBench-0.1.3  enables efficient FL benchmarking, evaluating 8+ algorithms across 9+ datasets (images/tabular) on one A40 GPU in ~3 weeks. It offers precise control over client heterogeneity with minimal setup, providing comprehensive metrics for actionable algorithm selection.   <br><br>
+          🔥<span style="color: #ff3860">[NEW!]</span> FedBench-0.1.3  enables efficient FL benchmarking, evaluating 9+ algorithms across 8+ datasets (images/tabular) on one A40 GPU in ~3 months. It offers precise control over client heterogeneity with minimal setup, providing comprehensive metrics for actionable algorithm selection.   <br><br>
           This end-to-end framework sets a new reproducibility standard through production-ready implementations, enabling direct performance comparisons while reducing validation overhead.
         </h4>
       </div>
@@ -733,13 +733,6 @@ tbody tr:hover {
           <td>10</td>
         </tr>
         <tr>
-          <td> <a href="https://www.cs.toronto.edu/~kriz/cifar.html">CIFAR-100</a></td>
-          <td>50,000</td>
-          <td>10,000</td>
-          <td>3,072</td>
-          <td>100</td>
-        </tr>
-        <tr>
           <td> <a href="https://huggingface.co/datasets/ufldl-stanford/svhn">SVHN</a></td>
           <td>73,257</td>
           <td>26,032</td>
@@ -774,13 +767,6 @@ tbody tr:hover {
           <td>1,000</td>
           <td>3</td>
           <td>2</td>
-        </tr>
-        <tr>
-          <td> <a href="https://huggingface.co/datasets/flwrlabs/femnist">FEMNIST</a></td>
-          <td>649,184</td>
-          <td>165,093</td>
-          <td>784</td>
-          <td>62</td>
         </tr>
       </tbody>
     </table>
