--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@ table.GeneratedTable thead {
         <div class="columns is-multiline is-centered">
           <div class="column is-one-third">
             <figure>
-              <img src="images/cifar10_c1_training_curve.pdf" alt="CIFAR-10 #C = 1">
+              <img src="https://github.com/NechbaMohammed/FLBenchmarkUI/tree/main/images/cifar10_c1_training_curve.pdf" alt="CIFAR-10 #C = 1">
               <figcaption class="is-size-7 has-text-weight-semibold">#C = 1</figcaption>
             </figure>
           </div>
